--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "crypto-js": "^4.2.0",
     "disable-devtool": "^0.3.8",
     "jwt-decode": "^4.0.0",
+    "moment-timezone": "^0.5.47",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-device-detect": "^2.2.3",
